force-app/main/default/objects/agrid__Related_Configuration__c/agrid__Related_Configuration__c.object-meta.xml
<CustomObject>
    <label>Related Configuration</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Related Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>