force-app/main/default/objects/agrid__Related_Configuration__c/fields/agrid__Configuration_Group__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration_Group__c</fullName>
    <label>Configuration Group</label>
    <referenceTo>agrid__Configuration_Group__c</referenceTo>
    <relationshipLabel>Related Configurations</relationshipLabel>
    <relationshipName>Related_Configurations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>