force-app/main/default/objects/agrid__Related_Configuration__c/fields/agrid__Label__c.field-meta.xml
<CustomField>
    <fullName>agrid__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>