force-app/main/default/objects/agrid__Related_Configuration__c/fields/agrid__Visibility__c.field-meta.xml
<CustomField>
    <fullName>agrid__Visibility__c</fullName>
    <label>Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>